<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="textHeading">My NanoDegree Apps !!</string>
    <string name="button1Text">SPOTIFY STREAMER</string>
    <string name="button2Text">SCORE APP</string>
    <string name="button3Text">LIBRARY APP</string>
    <string name="button4Text">BUILD IT BIGGER</string>
    <string name="button5Text">XYZ READER</string>
    <string name="button6Text">CAPSTONE:MY OWN APP</string>
</resources>
