<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/textHeading"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:textColor="#022b47"
        android:singleLine="true"
        android:id="@+id/appHeading" />

    <Button
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button1Text"
        android:id="@+id/button"
        android:layout_below="@+id/appHeading"
        android:layout_centerHorizontal="true"
        android:background="#ffa837"
        android:onClick="sendMessage1" />

    <Button
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button2Text"
        android:id="@+id/button1"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:background="#ffa837"
        android:onClick="sendMessage2" />

    <Button
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button3Text"
        android:id="@+id/button2"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:background="#ffa837"
        android:onClick="sendMessage3" />

    <Button
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button4Text"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:background="#ffa837"
        android:onClick="sendMessage4" />

    <Button
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button5Text"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:background="#ffa837"
        android:onClick="sendMessage5" />

    <Button
        android:layout_marginLeft="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button6Text"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:background="#b76767"
        android:textColor="#ffffff"
        android:onClick="sendMessage6" />

</RelativeLayout>
